--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import './header.scss';
 @import '/src/scss/plerdy.scss';
 @import './mixins.scss';
